# Semantic_SLAM_MSProject

./: README.md
bucket_detector/: CMakeLists.txt  package.xml
bucket_detector/cfg/: objectDetector_configFile.xml
bucket_detector/launch/: shapecolor_objectdetectionROSModule.launch
bucket_detector/src/include/: ColorImageProcessor.h  CreadorMascaras.h  EllipseDetectorYaed.h  Hough.h  LineDetector.h  PoseEstimator.h  ShapeImageProcessor.h  VisualObjectClassifier.h  VisualObjectDetector.h  VisualObjectRecognizer.h  VisualObjectRecognizerROSModule.h  common.h  cvg_string_conversions.h  xmlfilereader.h
bucket_detector/src/sources/: ColorImageProcessor.cpp  CreadorMascaras.cpp  EllipseDetectorYaed.cpp  Hough.cpp  LineDetector.cpp  PoseEstimator.cpp  ShapeImageProcessor.cpp  VisualObjectClassifier.cpp  VisualObjectDetector.cpp  VisualObjectRecognizer.cpp  VisualObjectRecognizerROSModule.cpp  common.cpp  cvg_string_conversions.cpp  xmlfilereader.cpp
bucket_detector/src/test/: ObjectDetection_Node.cpp  ObjectDetection_Node_WebCam.cpp  ShapeColor_ObjectDetection_Node.cpp
semantic_slam/: CMakeLists.txt
semantic_slam/config/: my_corridor.yaml
semantic_slam/include/: semantic_graph_slam_ros.h
semantic_slam/launch/: my_corridor_1.launch  my_corridor_2.launch  my_corridor_3.launch  uni_corridor_3.launch  uni_corridor_4.launch  uni_corridor_5.launch
semantic_slam/rviz/: graph_semantic_slam.rviz
semantic_slam/src/: semantic_graph_slam_ros.cpp
