<?xml version="1.0"?>
<package>
  <name>ShapeColor_ObjectDetection</name>
  <version>0.0.0</version>
  <description>The ShapeColor_ObjectDetection package</description>
  <maintainer email="carlos.sampedro@upm.es">carlos</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv_apps</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv_apps</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
